--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
   <title>Decay's Box</title>
+  <a href="styles.css"></a>
 </head>
   <body>
     <section id="name here" class="name here">
