--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
   <title>Decay's Box</title>
-  <a href="styles.css"></a>
+    <link rel="stylesheet" href="styles.css">
 </head>
   <body>
     <section id="name here" class="name here">
