--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ necklace-15-ct-tw-black-rhodiumplated-sterling-silver-18/p/V-442634402" href="li
                <a src="https://www.yslbeautyus.com/fragrance/womens-fragrances/black-opium/black-
 opium-eau-de-parfum/252YSL.html?srsltid=AfmBOoqURmTf3_6h3DRNYXsnzJGdo1YdRCMCjXqUlzwe0tBqpFpQfNlq" href="link of product" target="_blank"><button>Buy Now</button></a>
              </div>
-            <div cclass="product">
+            <div class="product">
               <img alt="img here" >
               <h4>Name of product</h4>
               <p>Price</p>
