--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <link rel="stylesheet" href="styles.css">
 </head>
   <body>
-    <section id="name here" class="name here">
-<div class="class name here">
+    <section id="home" class="banner">
+<div class="banner-text">
 <p>bannner goes here</p>
 </div>
     </section>
