--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </section>
   </hr>
 <header>
-  <div  class="class name here">
+  <div  class="brand-name">
     <h1>Decay's Box</h1>
     <p>Slogan here</p>
   </div>
