--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@
     </section>
   </hr>
 <header>
-  <div  class="brand-name">
     <h1>Decay's Box</h1>
-    <p>Slogan here</p>
+    <p>If a box that always persists could be the future then it would be Decay's Box where the future is stored!</p>
   </div>
     <nav>
       <ul>
