--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <nav>
       <ul>
         <li><a href="#home">Home</a></li>
-        <li><a href="#prodct-1">Product 1</a></li>
+        <li><a href="#product-1">Product 1</a></li>
         <li><a href="#product-2">Product 2</a></li>
         <li><a href="#product-3">Product 3</a></li>
         <li><a href="#testimonials">Testimonials</a></li>
@@ -139,23 +139,37 @@ opium-eau-de-parfum/252YSL.html?srsltid=AfmBOoqURmTf3_6h3DRNYXsnzJGdo1YdRCMCjXqU
         <p>Testimonial 4</p>
       </div>
     </section>
-
+    
     <section id="contact" class="section">
-      <h2>Contact The Merchant</h2> 
+<table>
+      <tr>
+        <td></td><h2>Contact The Merchant</h2>
+      </tr>
+  <tr>
+    <td>
       <form action="https://formspree.io/f/mvgzlwwy" method="POST">
         <label for="name">Your Name:</label>
         <input type="text" id="name" name="name" required>
-
+    </td>
+  </tr>
+  <tr>
+    <td>
         <label for="email">Your Email:</label>
         <input type="email" id="email" name="email" required>
-
+  </td>
+</tr>
+  <tr>
+    <td>
         <label for="message">Your Message:</label>
         <textarea id="message" name="message" required></textarea>
 
         <button type="submit">Send Message</button>
+    </td>
+  </tr>
       </form>
-    </section>
-
+</table>
+     </section>
+    
 <footer>
     <p>&copy; 2025 Decay's Box. All rights reserved.</p>
 </footer>
