--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <link rel="stylesheet" href="styles.css">
 </head>
   <body>
-    <section id="home" class="banner">
-<div class="banner-text">
-<p>bannner goes here</p>
-</div>
-    </section>
+    <div id="home" class="banner">
+       <div class="banner-text">
+           <p>bannner goes here</p>
+       </div>
+    </div>
   </br>
 <header>
     <h1>Decay's Box</h1>
