--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <body>
     <div id="home" class="banner">
        <div class="banner-text">
-           <img src = "dcy.jpg" style="width:100%;height:100%;">
+           <img src = "dcy.jpg" style="width:100%;height:500px;">
        </div>
     </div>
   </br>
