--- a/index.html
+++ b/index.html
@@ -38,19 +38,19 @@
                <img alt="img here" >
                <h4>Name of product</h4>
                <p>Price</p>
-               <a src="https://www.adidas.com/us/gazelle-indoor-shoes/IH5482.html" href="link of product" target="_blank"><button>Buy Now</button></a>
+               <a href="https://www.adidas.com/us/gazelle-indoor-shoes/IH5482.html" target="_blank"><button>Buy Now</button></a>
              </div>
             <div class="product">
               <img alt="img here" >
               <h4>Name of product</h4>
               <p>Price</p>
-              <a src="https://www.adidas.com/us/essentials-boyfriend-tee/JC8967.html" href="link of product" target="_blank"><button>Buy Now</button></a> 
+              <a href="https://www.adidas.com/us/essentials-boyfriend-tee/JC8967.html" target="_blank"><button>Buy Now</button></a> 
             </div>
           <div class="product">
               <img alt="img here" >
               <h4>Name of product</h4>
               <p>Price</p>
-              <a src="https://www.adidas.com/us/adicolor-classic-firebird-loose-track-pants/KA7744.html" href="link of product" target="_blank"><button>Buy Now</button></a> 
+              <a href="https://www.adidas.com/us/adicolor-classic-firebird-loose-track-pants/KA7744.html" target="_blank"><button>Buy Now</button></a> 
             </div>    
         </div> 
       </div>
@@ -65,21 +65,21 @@
                <img alt="img here" >
                <h4>Name of product</h4>
                <p>Price</p>
-               <a src="https://www.barkevs.com/unique-princess-cut-black-diamond-engagement-ring-set" href="link of product" target="_blank"><button>Buy Now</button></a>
+               <a href="https://www.barkevs.com/unique-princess-cut-black-diamond-engagement-ring-set" target="_blank"><button>Buy Now</button></a>
              </div>
             <div class="product">
               <img alt="img here" >
               <h4>Name of product</h4>
               <p>Price</p>
-              <a src="https://www.diamondere.com/p/bracelets-tennis-bracelets-harrison-9079-8930?
-metal=14k-white-gold&stones=black-diamond&stones=vs-diamond" href="link of product" target="_blank"><button>Buy Now</button></a> 
+              <a href="https://www.diamondere.com/p/bracelets-tennis-bracelets-harrison-9079-8930?
+metal=14k-white-gold&stones=black-diamond&stones=vs-diamond" target="_blank"><button>Buy Now</button></a> 
             </div>
            <div class="product">
               <img alt="img here" >
               <h4>Name of product</h4>
               <p>Price</p>
-              <a src="https://www.kay.com/ink-ice-heartshaped-garnet-black-white-diamond-wings-
-necklace-15-ct-tw-black-rhodiumplated-sterling-silver-18/p/V-442634402" href="link of product" target="_blank"><button>Buy Now</button></a> 
+              <a href="https://www.kay.com/ink-ice-heartshaped-garnet-black-white-diamond-wings-
+necklace-15-ct-tw-black-rhodiumplated-sterling-silver-18/p/V-442634402" target="_blank"><button>Buy Now</button></a> 
             </div>    
         </div> 
       </div>
@@ -94,20 +94,20 @@ necklace-15-ct-tw-black-rhodiumplated-sterling-silver-18/p/V-442634402" href="li
                <img alt="img here" >
                <h4>Name of product</h4>
                <p>Price</p>
-               <a src="https://www.yslbeautyus.com/fragrance/womens-fragrances/black-opium/black-
-opium-eau-de-parfum/252YSL.html?srsltid=AfmBOoqURmTf3_6h3DRNYXsnzJGdo1YdRCMCjXqUlzwe0tBqpFpQfNlq" href="link of product" target="_blank"><button>Buy Now</button></a>
+               <a href="https://www.yslbeautyus.com/fragrance/womens-fragrances/black-opium/black-
+opium-eau-de-parfum/252YSL.html?srsltid=AfmBOoqURmTf3_6h3DRNYXsnzJGdo1YdRCMCjXqUlzwe0tBqpFpQfNlq" target="_blank"><button>Buy Now</button></a>
              </div>
             <div class="product">
               <img alt="img here" >
               <h4>Name of product</h4>
               <p>Price</p>
-              <a src="https://www.chanel.com/us/fragrance/p/107180/bleu-de-chanel-parfum-spray/" href="link of product" target="_blank"><button>Buy Now</button></a> 
+              <a href="https://www.chanel.com/us/fragrance/p/107180/bleu-de-chanel-parfum-spray/" target="_blank"><button>Buy Now</button></a> 
             </div>
            <div class="product">
               <img alt="img here" >
               <h4>Name of product</h4>
               <p>Price</p>
-              <a src="https://www.candledelirium.com/delirium-suede-smoke-candle" href="link of product" target="_blank"><button>Buy Now</button></a> 
+              <a href="https://www.candledelirium.com/delirium-suede-smoke-candle" target="_blank"><button>Buy Now</button></a> 
             </div>    
         </div> 
       </div>
@@ -141,10 +141,11 @@ opium-eau-de-parfum/252YSL.html?srsltid=AfmBOoqURmTf3_6h3DRNYXsnzJGdo1YdRCMCjXqU
     </section>
     
     <section id="contact" class="section">
-<table>
+<table r>
       <tr>
         <td></td><h2>Contact The Merchant</h2>
       </tr>
+  
   <tr>
     <td>
       <form action="https://formspree.io/f/mvgzlwwy" method="POST">
@@ -152,17 +153,23 @@ opium-eau-de-parfum/252YSL.html?srsltid=AfmBOoqURmTf3_6h3DRNYXsnzJGdo1YdRCMCjXqU
         <input type="text" id="name" name="name" required>
     </td>
   </tr>
+  
   <tr>
     <td>
         <label for="email">Your Email:</label>
         <input type="email" id="email" name="email" required>
-  </td>
-</tr>
+    </td>
+  </tr>
+  
   <tr>
     <td>
         <label for="message">Your Message:</label>
         <textarea id="message" name="message" required></textarea>
-
+    </td>    
+  </tr>
+  
+  <tr>
+    <td>
         <button type="submit">Send Message</button>
     </td>
   </tr>
