--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>
 <head>
-  <title>Decay's Box</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Decay's Box</title>
     <link rel="stylesheet" href="styles.css">
 </head>
   <body>
@@ -142,13 +144,15 @@ opium-eau-de-parfum/252YSL.html?srsltid=AfmBOoqURmTf3_6h3DRNYXsnzJGdo1YdRCMCjXqU
     
     <section id="contact" class="section">
 <table r>
+   <form action="https://formspree.io/f/mvgzlwwy" method="POST">
       <tr>
-        <td></td><h2>Contact The Merchant</h2>
+        <td>
+          <h2>Contact The Merchant</h2>
+        </td>
       </tr>
   
   <tr>
     <td>
-      <form action="https://formspree.io/f/mvgzlwwy" method="POST">
         <label for="name">Your Name:</label>
         <input type="text" id="name" name="name" required>
     </td>
