--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
     <link rel="stylesheet" href="styles.css">
 </head>
   <body>
-    <div id="home" class="banner">
+    <section id="home" class="banner">
        <div class="banner-text">
-           <img src = "dcy.jpg" style="width:100%;height:500px;">
-       </div>
+           <img src = "dcy.jpg" style="width:100%;height:250px;">
     </div>
+</section>
+       </div>
+    </section>
   <hr />
 <header>
     <h1>Decay's Box</h1>
