--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <section id="home" class="banner">
        <div class="banner-text">
-           <img src = "dcy.jpg" style="width:100%;height:250px;">
+           <img src = "dac.jpg" style="width:100%;height:250px;">
     </div>
 </section>
        </div>
