--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@ opium-eau-de-parfum/252YSL.html?srsltid=AfmBOoqURmTf3_6h3DRNYXsnzJGdo1YdRCMCjXqU
     </section>
     
     <section id="contact" class="section">
-<table r>
+<table>
    <form action="https://formspree.io/f/mvgzlwwy" method="POST">
       <tr>
         <td>
