--- a/index.html
+++ b/index.html
@@ -145,8 +145,7 @@ opium-eau-de-parfum/252YSL.html?srsltid=AfmBOoqURmTf3_6h3DRNYXsnzJGdo1YdRCMCjXqU
       </div>
     </section>
     
-<table class="feedback">
-    <section id="contact" class="section">
+<table id="contact class="section">
    <form action="https://formspree.io/f/mvgzlwwy" method="POST">
       <tr>
         <td>
@@ -181,7 +180,6 @@ opium-eau-de-parfum/252YSL.html?srsltid=AfmBOoqURmTf3_6h3DRNYXsnzJGdo1YdRCMCjXqU
     </td>
   </tr>
       </form>
-    </section>
 </table>
     
 <footer>
