--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
        <div class="banner-text">
         <h2>Welcome to Decay's Box</h2>
         <p>Quality over quantity with a limited edition of goods that make any king desire more. From a range of clothes to a variety of perfumes and accessories. </p>
+        <p>We want the best for our costumers and fortunately we are the best.</p> 
     </div>
 </section>
        </div>
