--- a/index.html
+++ b/index.html
@@ -146,42 +146,22 @@ opium-eau-de-parfum/252YSL.html?srsltid=AfmBOoqURmTf3_6h3DRNYXsnzJGdo1YdRCMCjXqU
       </div>
     </section>
     
-<table id="contact class="section">
-   <form action="https://formspree.io/f/mvgzlwwy" method="POST">
-      <tr>
-        <td>
-          <h2>Contact The Merchant</h2>
-        </td>
-      </tr>
-  
-  <tr>
-    <td>
+<section id="contact class="section">
+      <h2>Contact The Merchant</h2>
+       <form action="https://formspree.io/f/mvgzlwwy" method="POST">
         <label for="name">Your Name:</label>
         <input type="text" id="name" name="name" required>
-    </td>
-  </tr>
-  
-  <tr>
-    <td>
+
         <label for="email">Your Email:</label>
         <input type="email" id="email" name="email" required>
-    </td>
-  </tr>
-  
-  <tr>
-    <td>
+
         <label for="message">Your Message:</label>
         <textarea id="message" name="message" required></textarea>
-    </td>    
-  </tr>
-  
-  <tr>
-    <td>
+
         <button type="submit">Send Message</button>
-    </td>
-  </tr>
+
       </form>
-</table>
+</section>
     
 <footer>
     <p>&copy; 2025 Decay's Box. All rights reserved.</p>
