--- a/index.html
+++ b/index.html
@@ -167,6 +167,6 @@ opium-eau-de-parfum/252YSL.html?srsltid=AfmBOoqURmTf3_6h3DRNYXsnzJGdo1YdRCMCjXqU
     <p>&copy; 2025 Decay's Box. All rights reserved.</p>
 </footer>
     
-   <script src="smt here"></script>
+   <script src="mtc.js"></script>
   </body>
 </html>
