--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
             <li><a href="#product-3">Product 3</a></li>
             <li><a href="#testimonials">Testimonials</a></li>
             <li><a href="#contact">Contact</a></li>
-            <li><a href="#home">Feeback/Complain</a></li>
           </ul>
       </nav>
   </header>
@@ -146,7 +145,7 @@ opium-eau-de-parfum/252YSL.html?srsltid=AfmBOoqURmTf3_6h3DRNYXsnzJGdo1YdRCMCjXqU
       </div>
     </section>
     
-<section id="contact class="section">
+<section id="contact" class="section">
       <h2>Contact The Merchant</h2>
        <form action="https://formspree.io/f/mvgzlwwy" method="POST">
         <label for="name">Your Name:</label>
