--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@ opium-eau-de-parfum/252YSL.html?srsltid=AfmBOoqURmTf3_6h3DRNYXsnzJGdo1YdRCMCjXqU
     </section>
     
 <section id="contact" class="section">
-      <h2>Contact The Merchant</h2>
+      <h2>Contact Us</h2>
        <form action="https://formspree.io/f/mvgzlwwy" method="POST">
         <label for="name">Your Name:</label>
         <input type="text" id="name" name="name" required>
