--- a/index.html
+++ b/index.html
@@ -119,12 +119,12 @@ opium-eau-de-parfum/252YSL.html?srsltid=AfmBOoqURmTf3_6h3DRNYXsnzJGdo1YdRCMCjXqU
     </section>
 
     <section id="for feature item" class="section">
-      <h2>Feature Item: name here</h2>
-      <p>description for feautre item</p>
+      <h2>Feature Item: Isolation Painting</h2>
+      <p>Christina Ramos painted this picture to portray his passion for the ugliness and beauty of mankind.</p>
       <div class="product">
-        <img alt="img here">
-        <h4>Name of fature item</h4>
-        <p>Price</p>
+        <img src="https://www.zatista.com/product/details/37501/Statuesque" alt="Statuesque by Christina Ramos" target="_blank">
+        <h4>Statuesque</h4>
+        <p>$2,420</p>
         <a target="_blank"><button>Buy Now</button></a>
       </div>
     </section>
