--- a/index.html
+++ b/index.html
@@ -122,10 +122,10 @@ opium-eau-de-parfum/252YSL.html?srsltid=AfmBOoqURmTf3_6h3DRNYXsnzJGdo1YdRCMCjXqU
       <h2>Feature Item: Isolation Painting</h2>
       <p>Christina Ramos painted this picture to portray his passion for the ugliness and beauty of mankind.</p>
       <div class="product">
-        <img src="https://www.zatista.com/product/details/37501/Statuesque" alt="Statuesque by Christina Ramos" target="_blank">
+        <img alt="Statuesque by Christina Ramos">
         <h4>Statuesque</h4>
         <p>$2,420</p>
-        <a target="_blank"><button>Buy Now</button></a>
+        <a href="https://www.zatista.com/product/details/37501/Statuesque" target="_blank"><button>Buy Now</button></a>
       </div>
     </section>
     
