--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ opium-eau-de-parfum/252YSL.html?srsltid=AfmBOoqURmTf3_6h3DRNYXsnzJGdo1YdRCMCjXqU
       <h2>Feature Item: Isolation Painting</h2>
       <p>Christina Ramos painted this picture to portray his passion for the ugliness and beauty of mankind.</p>
       <div class="product">
-        <img alt="Statuesque by Christina Ramos">
+        <img src="slu.png" alt="Statuesque by Christina Ramos">
         <h4>Statuesque</h4>
         <p>$2,420</p>
         <a href="https://www.zatista.com/product/details/37501/Statuesque" target="_blank"><button>Buy Now</button></a>
