--- a/index.html
+++ b/index.html
@@ -23,9 +23,10 @@
         <nav>
             <ul>
                 <li><a href="#home">Home</a></li>
-                <li><a href="#product-1">Product 1</a></li>
-                <li><a href="#product-2">Product 2</a></li>
-                <li><a href="#product-3">Product 3</a></li>
+                <li><a href="#product-1">Clothes</a></li>
+                <li><a href="#product-2">Accessories</a></li>
+                <li><a href="#product-3">Fragrances</a></li>
+                <li><a href="#feature-item">Feature Item</a></li>
                 <li><a href="#testimonials">Testimonials</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
