--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="UTF-8">
@@ -6,16 +7,6 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <section id="home" class="banner">
-        <div class="banner-text">
-            <h2>Welcome to Decay's Box</h2>
-            <p>Quality over quantity with a limited edition of goods that make any king desire more. From a range of clothes to a variety of perfumes and accessories.</p>
-            <p>We want the best for our customers and fortunately we are the best.</p>
-        </div>
-    </section>
-    
-    <hr />
-    
     <header>
         <h1>Decay's Box</h1>
         <p>If a box that always persists could be the future, then it would be Decay's Box where the future is stored!</p>
@@ -67,7 +58,7 @@
             <p>Mini slogan for better audience attraction</p>
             <div class="products">
                 <div class="product">
-                    <img src="ring.jpg" alt="ring image">
+                    <a href="https://us.carhartt-wip.com/products/og-single-knee-pant-seaton-stripe-black-rinsed-19640"><img src="ring.jpg" alt="ring image"></a>
                     <h4>Black Diamond Ring</h4>
                     <p>$4,100</p>
                     <a href="https://www.barkevs.com/unique-princess-cut-black-diamond-engagement-ring-set" target="_blank"><button>Buy Now</button></a>
