--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <p>Mini slogan for better audience attraction</p>
             <div class="products">
                 <div class="product">
-                    <a href="https://us.carhartt-wip.com/products/og-single-knee-pant-seaton-stripe-black-rinsed-19640"><img src="ring.jpg" alt="ring image"></a>
+                    <img src="ring.jpg" alt="ring image">
                     <h4>Black Diamond Ring</h4>
                     <p>$4,100</p>
                     <a href="https://www.barkevs.com/unique-princess-cut-black-diamond-engagement-ring-set" target="_blank"><button>Buy Now</button></a>
