--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
                 </div>
                 <div class="product">
                     <img alt="img here">
-                    <h4>Name of product</h4>
-                    <p>Price</p>
-                    <a href="https://www.adidas.com/us/essentials-boyfriend-tee/JC8967.html" target="_blank"><button>Buy Now</button></a> 
+                    <h4>OG Single Knee Pants</h4>
+                    <p>$168</p>
+                    <a href="https://us.carhartt-wip.com/products/og-single-knee-pant-seaton-stripe-black-rinsed-19640" target="_blank"><button>Buy Now</button></a> 
                 </div>
                 <div class="product">
                     <img alt="img here">
