--- a/index.html
+++ b/index.html
@@ -31,20 +31,20 @@
             <p>Mini slogan for better audience attraction</p>
             <div class="products">
                 <div class="product">
-                    <img alt="img here">
-                    <h4>Name of product</h4>
+                    <img src="shirt.png" alt="long sleeve tee here">
+                    <h4>Blue Triple Cross Floral</h4>
                     <p>Price</p>
                     <a href="https://www.adidas.com/us/gazelle-indoor-shoes/IH5482.html" target="_blank"><button>Buy Now</button></a>
                 </div>
                 <div class="product">
-                    <img alt="img here">
+                    <img src="jeans.png" alt="Pants">
                     <h4>OG Single Knee Pants</h4>
                     <p>$168</p>
                     <a href="https://us.carhartt-wip.com/products/og-single-knee-pant-seaton-stripe-black-rinsed-19640" target="_blank"><button>Buy Now</button></a> 
                 </div>
                 <div class="product">
-                    <img alt="img here">
-                    <h4>Name of product</h4>
+                    <img src="shoes.png" alt="shoes here">
+                    <h4>Air Jordan 4 Retro GS 'Military Blue'</h4>
                     <p>Price</p>
                     <a href="https://www.adidas.com/us/adicolor-classic-firebird-loose-track-pants/KA7744.html" target="_blank"><button>Buy Now</button></a> 
                 </div>    
