--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
                 <div class="product">
                     <img src="shirt.png" alt="long sleeve tee here">
                     <h4>Blue Triple Cross Floral</h4>
-                    <p>Price</p>
-                    <a href="https://www.adidas.com/us/gazelle-indoor-shoes/IH5482.html" target="_blank"><button>Buy Now</button></a>
+                    <p>$1,150</p>
+                    <a href="https://shengliroadmarket.com/collections/tshirt/products/chrome-hearts-blue-triple-cross-floral-long-sleeves-tee" target="_blank"><button>Buy Now</button></a>
                 </div>
                 <div class="product">
                     <img src="jeans.png" alt="Pants">
@@ -46,8 +46,8 @@
                 <div class="product">
                     <img src="shoes.png" alt="shoes here">
                     <h4>Air Jordan 4 Retro GS 'Military Blue'</h4>
-                    <p>Price</p>
-                    <a href="https://www.adidas.com/us/adicolor-classic-firebird-loose-track-pants/KA7744.html" target="_blank"><button>Buy Now</button></a> 
+                    <p>$240</p>
+                    <a href="https://www.kickgame.com/products/air-jordan-4-retro-gs-military-blue-hf4281-141" target="_blank"><button>Buy Now</button></a> 
                 </div>    
             </div> 
         </div>
