--- a/index.html
+++ b/index.html
@@ -31,24 +31,30 @@
             <p>Mini slogan for better audience attraction</p>
             <br />
             <div class="products">
+              <a href="https://shengliroadmarket.com/collections/tshirt/products/chrome-hearts-blue-triple-cross-floral-long-sleeves-tee" target="_blank">
                 <div class="product">
                     <img src="shirt.png" alt="long sleeve tee here">
                     <h4>Blue Triple Cross Floral</h4>
                     <p>$1,150</p>
                     <a href="https://shengliroadmarket.com/collections/tshirt/products/chrome-hearts-blue-triple-cross-floral-long-sleeves-tee" target="_blank"><button>Buy Now</button></a>
                 </div>
+              </a>
+                <a href="hhttps://us.carhartt-wip.com/products/og-single-knee-pant-seaton-stripe-black-rinsed-19640" target="_blank">
                 <div class="product">
                     <img src="jeans.png" alt="Pants">
                     <h4>OG Single Knee Pants</h4>
                     <p>$168</p>
                     <a href="https://us.carhartt-wip.com/products/og-single-knee-pant-seaton-stripe-black-rinsed-19640" target="_blank"><button>Buy Now</button></a> 
                 </div>
+                </a>
+                <a href="https://www.kickgame.com/products/air-jordan-4-retro-gs-military-blue-hf4281-141" target="_blank">
                 <div class="product">
                     <img src="shoes.png" alt="shoes here">
                     <h4>Air Jordan 4 Retro GS 'Military Blue'</h4>
                     <p>$240</p>
-                    <a href="https://www.kickgame.com/products/air-jordan-4-retro-gs-military-blue-hf4281-141" target="_blank"><button>Buy Now</button></a> 
-                </div>    
+                    <a href="https://www.kickgame.com/products/air-jordan-4-retro-gs-military-blue-hf4281-141" target="_blank"><button>Buy Now</button></a>
+                </div>
+                </a>
             </div> 
         </div>
     </section>
@@ -59,24 +65,30 @@
             <p>Mini slogan for better audience attraction</p>
             <br />
             <div class="products">
+                <a href="https://www.barkevs.com/unique-princess-cut-black-diamond-engagement-ring-set" target="_blank">
                 <div class="product">
                     <img src="ring.jpg" alt="ring image">
                     <h4>Black Diamond Ring</h4>
                     <p>$4,100</p>
                     <a href="https://www.barkevs.com/unique-princess-cut-black-diamond-engagement-ring-set" target="_blank"><button>Buy Now</button></a>
                 </div>
+                </a>
+                <a href="https://www.diamondere.com/p/bracelets-tennis-bracelets-harrison-9079-8930?metal=14k-white-gold&stones=black-diamond&stones=vs-diamond" target="_blank">
                 <div class="product">
                     <img src="bracelet.jpg" alt="bracelet image">
                     <h4>Harrison Bracelet</h4>
                     <p>$22,000</p>
                     <a href="https://www.diamondere.com/p/bracelets-tennis-bracelets-harrison-9079-8930?metal=14k-white-gold&stones=black-diamond&stones=vs-diamond" target="_blank"><button>Buy Now</button></a> 
                 </div>
+                </a>
+                <a href="https://www.kay.com/ink-ice-heartshaped-garnet-black-white-diamond-wings-necklace-15-ct-tw-black-rhodiumplated-sterling-silver-18/p/V-442634402" target="_blank">
                 <div class="product">
                     <img src="necklace.png" alt="necklace image">
                     <h4>Wings Necklace</h4>
                     <p>$350</p>
                     <a href="https://www.kay.com/ink-ice-heartshaped-garnet-black-white-diamond-wings-necklace-15-ct-tw-black-rhodiumplated-sterling-silver-18/p/V-442634402" target="_blank"><button>Buy Now</button></a> 
-                </div>    
+                </div>
+                </a>
             </div> 
         </div>
     </section>
@@ -87,24 +99,30 @@
             <p>Mini slogan for better audience attraction</p>
             <br />
             <div class="products">
+                <a href="https://www.yslbeautyus.com/fragrance/womens-fragrances/black-opium/black-opium-eau-de-parfum/252YSL.html?srsltid=AfmBOoqURmTf3_6h3DRNYXsnzJGdo1YdRCMCjXqUlzwe0tBqpFpQfNlq" target="_blank">
                 <div class="product">
                     <img src="black.png" alt="black opium image">
                     <h4>Black Opium</h4>
                     <p>$165</p>
                     <a href="https://www.yslbeautyus.com/fragrance/womens-fragrances/black-opium/black-opium-eau-de-parfum/252YSL.html?srsltid=AfmBOoqURmTf3_6h3DRNYXsnzJGdo1YdRCMCjXqUlzwe0tBqpFpQfNlq" target="_blank"><button>Buy Now</button></a>
                 </div>
+                </a>
+                <a href="https://www.chanel.com/us/fragrance/p/107180/bleu-de-chanel-parfum-spray/" target="_blank">
                 <div class="product">
                     <img src="chanel.png" alt="chanel image">
                     <h4>Bleu De Chanel</h4>
                     <p>$200</p>
                     <a href="https://www.chanel.com/us/fragrance/p/107180/bleu-de-chanel-parfum-spray/" target="_blank"><button>Buy Now</button></a> 
                 </div>
+                </a>
+                <a href="https://www.candledelirium.com/delirium-suede-smoke-candle" target="_blank">
                 <div class="product">
                     <img src="candle.jpg" alt="candle image">
                     <h4>Delirium Candle</h4>
                     <p>$60</p>
                     <a href="https://www.candledelirium.com/delirium-suede-smoke-candle" target="_blank"><button>Buy Now</button></a> 
                 </div>    
+                </a>
             </div> 
         </div>
     </section>
@@ -113,7 +131,7 @@
         <h2>Feature Item: Isolation Painting</h2>
         <p>Christina Ramos painted this picture to portray his passion for the ugliness and beauty of mankind.</p>
         <div class="product">
-            <img src="slu.png" alt="Statuesque by Christina Ramos">
+            <a href="https://www.zatista.com/product/details/37501/Statuesque" target="_blank"><img src="slu.png" alt="Statuesque by Christina Ramos"></a>
             <h4>Statuesque</h4>
             <p>$2,420</p>
             <a href="https://www.zatista.com/product/details/37501/Statuesque" target="_blank"><button>Buy Now</button></a>
