--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
                     <a href="https://shengliroadmarket.com/collections/tshirt/products/chrome-hearts-blue-triple-cross-floral-long-sleeves-tee" target="_blank"><button>Buy Now</button></a>
                 </div>
               </a>
-                <a href="hhttps://us.carhartt-wip.com/products/og-single-knee-pant-seaton-stripe-black-rinsed-19640" target="_blank">
+                <a href="hhttps://shengliroadmarket.com/collections/jeans/products/chrome-hearts-st-barth-baby-blue-cross-patch-white-jeans" target="_blank">
                 <div class="product">
                     <img src="jeans.png" alt="Pants">
-                    <h4>OG Single Knee Pants</h4>
-                    <p>$168</p>
-                    <a href="https://us.carhartt-wip.com/products/og-single-knee-pant-seaton-stripe-black-rinsed-19640" target="_blank"><button>Buy Now</button></a> 
+                    <h4>St Barth Baby Blue Cross Patch White</h4>
+                    <p>$23,500</p>
+                    <a href="https://shengliroadmarket.com/collections/jeans/products/chrome-hearts-st-barth-baby-blue-cross-patch-white-jeans" target="_blank"><button>Buy Now</button></a> 
                 </div>
                 </a>
                 <a href="https://www.kickgame.com/products/air-jordan-4-retro-gs-military-blue-hf4281-141" target="_blank">
