--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                     <img src="black.png" alt="black opium image">
                     <h4>Black Opium</h4>
                     <p>$165</p>
-                    <a href="https://www.yslbeautyus.com/fragrance/womens-fragrances/black-opium/black-opium-eau-de-parfum/252YSL.html?srsltid=AfmBOoqURmTf3_6h3DRNYXsnzJGdo1YdRCMCjXqUlzwe0tBqpFpQfNlq" target="_blank"><button>Buy Now</button></a>
+                    <a href="https://www.yslbeautyus.com/fragrance/womens-fragrances/black-opium/black-opium-eau-de-parfum/252YSL.html?dwvar_252YSL_size=3.0%20oz." target="_blank"><button>Buy Now</button></a>
                 </div>
                 <div class="product">
                     <img src="chanel.png" alt="chanel image">
