--- a/index.html
+++ b/index.html
@@ -163,6 +163,6 @@
         <p>&copy; 2025 Decay's Box. All rights reserved.</p>
     </footer>
     
-    <script src="mtc.js"></script>
+    <script src="cart.js"></script>
 </body>
 </html>
