--- a/index.html
+++ b/index.html
@@ -7,10 +7,25 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+   <div id="loader" style="position:fixed;top:0;left:0;width:100%;height:100%;background:#080808;z-index:999;display:flex;justify-content:center;align-items:center;">
+        <div class="spinner"></div>
+    </div>
+
     <header>
-        <h1>Decay's Box</h1>
-        <p>If a box that always persists could be the future, then it would be Decay's Box where the future is stored!</p>
-        <hr>
+        <div class="header-container">
+            <h1>Decay's Box</h1>
+            <p>Where luxury persists through time</p>
+            <div id="cart-icon">
+                🛒 <span id="cart-count">0</span>
+                <div id="cart-dropdown">
+                    <div id="cart-items"></div>
+                    <div class="cart-total">
+                        <p>Total: $<span id="cart-total">0</span></p>
+                    </div>
+                    <button id="checkout-btn">Proceed to Fake Checkout</button>
+                </div>
+            </div>
+        </div>
         <nav>
             <ul>
                 <li><a href="#home">Home</a></li>
@@ -22,6 +37,18 @@
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
+        
+    <div id="promo-banner">
+        <p>✨ Exclusive: Free shipping on orders over $500</p>
+    </div>
+
+    <div class="product">
+        <img src="shirt.png" alt="Triple Cross Floral Shirt">
+        <h4>Triple Cross Floral</h4>
+        <div class="rating">★★★★☆ <span>(24)</span></div>
+        <p class="price">$1,150</p>
+        <button class="add-to-cart" data-name="Triple Cross Floral" data-price="1150">Add to Cart</button>
+    </div>
     </header>
     
     <section id="product-1" class="section"> 
