--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <div class="cart-total">
                         <p>Total: $<span id="cart-total">0</span></p>
                     </div>
-                    <button id="checkout-btn">Proceed to Fake Checkout</button>
+                    <button id="checkout-btn">Proceed to Checkout</button>
                 </div>
             </div>
         </div>
