--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </nav>
         
     <div id="promo-banner">
-        <p>✨ Exclusive: Free shipping on orders over $500</p>
+        <p> Exclusive: Free shipping on orders over $500</p>
     </div>
 
     <div class="product">
