--- a/index.html
+++ b/index.html
@@ -59,22 +59,22 @@
             <br>
             <div class="products">
                 <div class="product">
-                    <img src="shirt.png" alt="long sleeve tee">
+                    <a href="https://shengliroadmarket.com/collections/tshirt/products/chrome-hearts-blue-triple-cross-floral-long-sleeves-tee" target="_blank"><img src="shirt.png" alt="long sleeve tee"></a>
                     <h4>Triple Cross Floral</h4>
                     <p class="price">$1,150</p>
-                    <a href="https://shengliroadmarket.com/collections/tshirt/products/chrome-hearts-blue-triple-cross-floral-long-sleeves-tee" target="_blank"><button>Buy Now</button></a>
+                    <button>Buy Now</button>
                 </div>
                 <div class="product">
-                    <img src="jeans.png" alt="Pants">
+                    <a href="https://shengliroadmarket.com/collections/jeans/products/chrome-hearts-st-barth-baby-blue-cross-patch-white-jeans" target="_blank"><img src="jeans.png" alt="Pants"></a>
                     <h4>St Barth Cross Patch</h4>
                     <p class="price">$23,500</p>
-                    <a href="https://shengliroadmarket.com/collections/jeans/products/chrome-hearts-st-barth-baby-blue-cross-patch-white-jeans" target="_blank"><button>Buy Now</button></a> 
+                    <button>Buy Now</button>
                 </div>
                 <div class="product">
-                    <img src="shoes.png" alt="shoes">
+                    <a href="https://www.kickgame.com/products/air-jordan-4-retro-gs-military-blue-hf4281-141" target="_blank"><img src="shoes.png" alt="shoes"></a>
                     <h4>Air Jordan 4 Retro GS</h4>
                     <p class="price">$240</p>
-                    <a href="https://www.kickgame.com/products/air-jordan-4-retro-gs-military-blue-hf4281-141" target="_blank"><button>Buy Now</button></a>
+                    <button>Buy Now</button>
                 </div>
             </div> 
         </div>
@@ -87,22 +87,22 @@
             <br>
             <div class="products">
                 <div class="product">
-                    <img src="ring.jpg" alt="ring">
+                    <a href="https://www.barkevs.com/unique-princess-cut-black-diamond-engagement-ring-set" target="_blank"><img src="ring.jpg" alt="ring"></a>
                     <h4>Black Diamond Ring</h4>
                     <p class="price">$4,100</p>
-                    <a href="https://www.barkevs.com/unique-princess-cut-black-diamond-engagement-ring-set" target="_blank"><button>Buy Now</button></a>
+                    <button>Buy Now</button>
                 </div>
                 <div class="product">
-                    <img src="bracelet.jpg" alt="bracelet">
+                    <a href="https://www.diamondere.com/p/bracelets-tennis-bracelets-harrison-9079-8930?metal=14k-white-gold&stones=black-diamond&stones=vs-diamond" target="_blank"><img src="bracelet.jpg" alt="bracelet"></a>
                     <h4>Harrison Bracelet</h4>
                     <p class="price">$22,000</p>
-                    <a href="https://www.diamondere.com/p/bracelets-tennis-bracelets-harrison-9079-8930?metal=14k-white-gold&stones=black-diamond&stones=vs-diamond" target="_blank"><button>Buy Now</button></a> 
+                    <button>Buy Now</button>
                 </div>
                 <div class="product">
-                    <img src="necklace.png" alt="necklace">
+                    <a href="https://www.kay.com/ink-ice-heartshaped-garnet-black-white-diamond-wings-necklace-15-ct-tw-black-rhodiumplated-sterling-silver-18/p/V-442634402" target="_blank"><img src="necklace.png" alt="necklace"></a>
                     <h4>Wings Necklace</h4>
                     <p class="price">$350</p>
-                    <a href="https://www.kay.com/ink-ice-heartshaped-garnet-black-white-diamond-wings-necklace-15-ct-tw-black-rhodiumplated-sterling-silver-18/p/V-442634402" target="_blank"><button>Buy Now</button></a> 
+                    <button>Buy Now</button> 
                 </div>
             </div> 
         </div>
@@ -115,22 +115,22 @@
             <br>
             <div class="products">
                 <div class="product">
-                    <img src="black.png" alt="black opium perfume">
+                    <a href="https://www.yslbeautyus.com/fragrance/womens-fragrances/black-opium/black-opium-eau-de-parfum/252YSL.html?dwvar_252YSL_size=3.0%20oz." target="_blank"><img src="black.png" alt="black opium perfume"></a>
                     <h4>Black Opium</h4>
                     <p class="price">$165</p>
-                    <a href="https://www.yslbeautyus.com/fragrance/womens-fragrances/black-opium/black-opium-eau-de-parfum/252YSL.html?dwvar_252YSL_size=3.0%20oz." target="_blank"><button>Buy Now</button></a>
+                    <button>Buy Now</button>
                 </div>
                 <div class="product">
-                    <img src="chanel.png" alt="chanel perfume">
+                    <a href="https://www.chanel.com/us/fragrance/p/107180/bleu-de-chanel-parfum-spray/" target="_blank"><img src="chanel.png" alt="chanel perfume"></a>
                     <h4>Bleu De Chanel</h4>
                     <p class="price">$200</p>
-                    <a href="https://www.chanel.com/us/fragrance/p/107180/bleu-de-chanel-parfum-spray/" target="_blank"><button>Buy Now</button></a> 
+                    <button>Buy Now</button> 
                 </div>
                 <div class="product">
-                    <img src="candle.jpg" alt="candle">
+                    <a href="https://www.candledelirium.com/delirium-suede-smoke-candle" target="_blank"><img src="candle.jpg" alt="candle"></a>
                     <h4>Delirium Candle</h4>
                     <p class="price">$60</p>
-                    <a href="https://www.candledelirium.com/delirium-suede-smoke-candle" target="_blank"><button>Buy Now</button></a> 
+                    <button>Buy Now</button> 
                 </div>    
             </div> 
         </div>
@@ -144,7 +144,7 @@
             <a href="https://www.zatista.com/product/details/37501/Statuesque" target="_blank"><img src="slu.png" alt="Statuesque by Christina Ramos"></a>
             <h4>Statuesque</h4>
             <p class="price">$2,420</p>
-            <a href="https://www.zatista.com/product/details/37501/Statuesque" target="_blank"><button>Buy Now</button></a>
+            <button>Buy Now</button>
         </div>
     </section>
     
