--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-   <div id="loader" style="position:fixed;top:0;left:0;width:100%;height:100%;background:#080808;z-index:999;display:flex;justify-content:center;align-items:center;">
-        <div class="spinner"></div>
-    </div>
+   <div id="loader">
+    <div class="spinner"></div>
+</div>
 
     <header>
         <div class="header-container">
